Trying to ensure full contact info appears on mobile
made ridiculous br pad

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 
   p {
   text-align:justify;
-  padding:2px;
+/*  padding:2px; */
   background-color:rgba(0,0,0,0.6);
   font-size: 34px;
 
